--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
     "web-token/jwt-framework": "^2.2.10",
     "firebase/php-jwt": "^5.2",
     "gabordemooij/redbean": "dev-master",
-    "robmorgan/phinx": "^0.12.7"
+    "robmorgan/phinx": "^0.12.7",
+    "react/http": "^1.3",
+    "ramsey/uuid": "^4.1",
+    "respect/validation": "^2.2"
 },
 "require-dev": {
     "php": "^8.0",
